--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "RV | FrontEnd",
-  "name": "Ricardo Vargas | FrontEnd developer",
+  "short_name": "RV | Front-end",
+  "name": "Ricardo Vargas | Front-end developer",
   "icons": [
     {
       "src": "/logo192.png",
@@ -18,5 +18,5 @@
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "display": "standalone",
-  "description": "A passionated frontend developer | React, Typescript, Redux, HTML, CSS, javascript and SASS."
+  "description": "A passionated front end developer | React, Typescript, Redux, HTML, CSS, javascript and SASS."
 }
